--- a/package.json
+++ b/package.json
@@ -92,13 +92,16 @@
     "@angular/core": "^5.2.7",
     "@angular/forms": "^5.2.7",
     "@angular/material": "^5.2.4",
+    "@angular/material-moment-adapter": "^5.2.4",
     "@angular/platform-browser": "^5.2.7",
     "@angular/platform-browser-dynamic": "^5.2.7",
     "@angular/platform-server": "^5.2.7",
     "@angular/router": "^5.2.7",
+    "angular2-moment": "^1.8.0",
     "core-js": "^2.4.1",
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
+    "moment": "^2.21.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
